// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders concern 1`] = `
<div
  className=""
>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      Are you ure you want to delete this concern?
    </div>
    <div
      className={undefined}
    >
      <div
        className=""
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className={undefined}
        onClick={[Function]}
      >
        Yes, delete
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className=""
      >
        Error deleting concern.
      </div>
      <div
        className={undefined}
      >
        Please try again.
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <a
            className={undefined}
            href="/admin/concerns"
            onClick={[Function]}
          >
            Close
          </a>
          <div
            className={undefined}
            onClick={[Function]}
          >
            <div
              className={undefined}
            />
            <div
              className={undefined}
            >
              Delete concern
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Title:
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        title
      </div>
      <div
        className=""
      >
        <input
          name="editedTitle"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders concern error 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      Unable to load concern
    </div>
    <div
      className={undefined}
    >
      Sorry, something went wrong. Please try again.
    </div>
    <div
      className=""
      onClick={[Function]}
    >
      Try again
    </div>
  </div>
</div>
`;

exports[`renders concern loading 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    Loading...
  </div>
</div>
`;
